# ngram_surname_classifiers

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/outputs/: LIGA_log_False_median_False.joblib  LIGA_log_False_median_True.joblib  LIGA_log_True_median_False.joblib  LIGA_log_True_median_True.joblib  NGram_distance_cosine_tfidf.joblib  NGram_distance_match_rate.joblib  NGram_distance_rank.joblib  final_rne_ground_truth.csv
scripts/evaluation/: evaluation_pipeline.ipynb  models.py
scripts/evaluation/test/: all_results.csv
scripts/pipeline/: preprocessing_pipeline.ipynb
scripts/scraper/: aesp_rne_scraper.py
